--- a/move/Move.toml
+++ b/move/Move.toml
@@ -4,8 +4,10 @@ version = "1.0.0"
 authors = []
 
 [addresses]
+legends_trade="_"
 
 [dev-addresses]
+legends_trade="0x111"
 
 [dependencies.AptosFramework]
 git = "https://github.com/aptos-labs/aptos-framework.git"
