--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "recharts": "^3.0.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
