--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.0",
+    "axios": "^1.12.2",
     "hono": "^4.9.2"
   },
   "devDependencies": {
