--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@aptos-labs/derived-wallet-ethereum": "^0.5.1",
     "@aptos-labs/derived-wallet-solana": "^0.5.1",
-    "@aptos-labs/ts-sdk": "^3.1.3",
+    "@aptos-labs/ts-sdk": "^5.1.0",
+    "@aptos-labs/wallet-adapter-core": "^7.4.0",
     "@aptos-labs/wallet-adapter-react": "^7.0.4",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -28,6 +29,8 @@
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@wormhole-foundation/sdk": "^3.4.6",
     "@wormhole-foundation/sdk-aptos": "^3.4.6",
+    "@wormhole-foundation/sdk-evm": "^3.6.0",
+    "@wormhole-foundation/sdk-solana": "^3.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
